--- a/app/globals.css
+++ b/app/globals.css
@@ -42,3 +42,13 @@ body {
   flex: 0 0 100%;
   min-width: 0;
 }
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
